Chainguard, dep bumps